@@ -36,11 +36,17 @@ Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 @
 tbaMUD 3.61
+[Dec 16 2009] - Rumble
+  Added some missing code for last_ibt in ibt.c.
+  Fixed typos in ibt.c (thanks Elervan)
+[Dec 13 2009] - Rumble
+  Changed set password to level GRGOD.
+[Dec 08 2009] - Rumble
+  Added "current zone:" to immortal score.
 [Dec 07 2009] - Rumble
   Renumbered UNUSED triggers to UNUSED# to make it easier to unset them when changing trig types. (thanks Parna)
   Fixed double free in IBT that caused crash on /a or saving without any description.
 [Dec 06 2009] - Rumble
-  Fixed medit sex and position numbering. The numbering was wrong with the new column_list.
   Fixed medit autoroll so it would recognize a change and save.
 [Dec 05 2009] - Rumble
   Changed zedit clear level restrictions to dump you back at main zedit menu instead of in the level menu.
